--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
           setuptools-scm
 
       - name: Test package
-        run: pytest -ra --showlocals --cov=scikit_build_core
+        run: pytest -ra --showlocals --cov=scikit_build_core --k test_abi3_wheel
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.1
