--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "pypy-3.8", "3.11"]
-        runs-on: [ubuntu-latest, macos-latest]
+        python-version: ["3.7"]
+        runs-on: [ubuntu-latest]
         cmake-version: ["3.15.x"]
 
         include:
