--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install package
-        run:
-          pip install .[test,cov] cmake ninja rich hatch-fancy-pypi-readme
-          setuptools-scm
+        run: pip install .[test,cov] cmake ninja rich hatch-fancy-pypi-readme
 
       - name: Test package
         run:
